<resources>

    <string-array name="work_type_list" translatable="false">
        <item>未定义</item>
        <item>上班</item>
        <item>下班</item>
        <item>请假</item>
        <item>销假</item>
        <item>位置</item>
    </string-array>

    <string name="app_name">民兵团考勤</string>
    <string name="work">打卡</string>
    <string name="set">设置</string>
    <string name="account">帐号：</string>
    <!-- <string name="username">用户名</string> -->
    <string name="username">用户名</string>
    <string name="login">登  录</string>
    <string name="registration">注册</string>
    <string name="getsmscode">获取验证码</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="registration_account">注册帐号</string>
    <string name="IDNumber">身份证号</string>
    <string name="Birthday">出生日期</string>
    <string name="Email">电子邮箱</string>
    <string name="phoneNumber">手机号</string>
    <string name="name">姓名</string>
    <string name="tel">电话</string>
    <string name="group">部门</string>
    <string name="password">密码</string>
    <string name="EnterPassWordLengthShouldBe6to20">密码,长度6-20位</string>
    <string name="smscode">验证码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="Registration">签到</string>
    <string name="Inquiry">查询</string>
    <string name="SetUp">设置</string>
    <string name="input_register_info">请填写注册信息</string>
    <string name="phone_number_format_is_incorrect">手机号码格式不正确</string>
    <string name="Email_format_error">电子邮箱格式有错误</string>
    <string name="Please_enter_the_correct_password">请正确输入密码</string>
    <string name="Two_passwords_do_not_match">两次密码不一致</string>
    <string name="Please_enter_the_correct_phone_number">请正确输入手机号</string>
    <string name="Please_enter_the_UserName_to_log_on">用户名或密码为空</string>
    <string name="The_user_is_not_registered">该手机号码未注册</string>
    <string name="PassWordError">密码错误</string>
    <string name="Login_successful">登录成功</string>
    <string name="Registered_successful">注册成功</string>
    <string name="Registered_failed">该用户名已经注册</string>
    <string name="Open_GPS">请开启GPS导航</string>
    <string name="NetError">网络错误，请检查网络</string>
    <string name="Registration_Success">签到成功</string>
    <string name="Registration_Failed">签到失败</string>
    <string name="SaveUserPassword">自动登录</string>
    <string name="welcome">欢迎使用民兵团考勤应用！</string>
    <string name="input_name_pwd">请输入用户名和密码！</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="selected_year_month">请选择月份</string>
    <string name="is_logining">正在登录，请稍后...!</string>
    <string name="getData">正在获取数据...!</string>
    <string name="exit_click_tip">再按一次退出程序</string>
    <string name="sign_info">早上打卡时间:%1$s\n下午打卡时间:%2$s</string>
    <string name="please_input_phone">请输入手机号码！</string>
    <string name="format_phone">手机号格式不正确，请重新输入！</string>
    <string name="please_getcode">请先获取验证码！</string>
    <string name="please_inputcode">验证码不能为空！</string>
    <string name="erroe_smscoe">验证码输入错误！</string>
    <string name="time_re_get">秒后重新获取</string>
    <string name="time_out_sms">短信验证码已失效，请重新获取！</string>
    <string name="net_discon">网络连接不可用，是否进行设置？</string>
    <string name="is_me">用户名错误，不可以替别人签到！</string>
    <string name="scan_upload">扫描立即下载</string>
    <string name="updateMsg">有最新的软件包哦，亲快下载吧~</string>
    <string name="update_version">软件版本更新</string>
    <string name="upload_app">下载</string>
    <string name="after_say">以后再说</string>
    <string name="detail_information">应勤天数：%1$d天；实勤天数%2$d天；迟到1-9分钟：%3$d次；迟到10-29分钟：%4$d次；迟到30-59分钟：%5$d次；早退：%6$d次</string>
    <string name="phone_is_null">该手机号未注册，请重新输入！</string>
    <string name="net_null">网络异常</string>

    <!-- 退出 -->
    <string name="Sure_you_want_to_quit">确定要退出吗?</string>
    <string name="prompt">提示</string>
    <string name="determine">确定</string>
    <string name="cancel">取消</string>
    <string name="next">下一步</string>
    <string name="YourNames">请输入您的姓名</string>
    <string name="YourPhone">请输入您的手机号</string>
    <string name="YourEmail">请输入您的电子邮箱</string>
    <!-- 签到 -->
    <string name="default_times">2015年1月14日</string>
    <string name="ButtonWorkOn">上班</string>
    <string name="ButtonWorkOff">下班</string>
    <string name="TextViewWorkTime">时间</string>
    <string name="WorkOnTime">09:00</string>
    <string name="WorkOffTime">18:00</string>
    <string name="Location">位置</string>
    <string name="PersonList">PersonList</string>
    <!-- 设置 -->
    <string name="Head_portrait">设置头像</string>
    <string name="AboutUs">关于我们</string>
    <string name="Feedback">意见反馈</string>
    <string name="ExitTheApp">退出当前登录状态</string>
    <string name="ResetPassWord">重置密码</string>
    <string name="SelectBirthdayTime">选择出生日期</string>
    <string name="NoFoundSDCard">未找到存储卡，无法存储照片！</string>
    <string name="ModifiedSuccessfully">修改成功</string>
    <string name="ModifiedFailed">修改失败</string>
    <string name="DefaultName">民兵团</string>
    <string name="DefaultGroup">技术部</string>
    <string name="DefaultTel">130****8888</string>
    <string name="DefaultIDNumber">1970-01-01</string>
    <string name="DefaultEmail">minbingtuan@qq.com</string>
    <string name="SetUserPhoto">设置头像</string>
    <string name="SelectLocaPhoto">选择本地图片</string>
    <string name="Photo">拍照</string>
    <string name="ChangePassWord">修改密码</string>
    <string name="OldPassWord">旧密码:</string>
    <string name="NewPassWord">新密码:</string>
    <string name="ConfirmNewPassWord">密码确认:</string>
    <string name="EnterOldPassWord">请输入旧密码</string>
    <string name="EnterNewPassWord">请输入新密码</string>
    <string name="EnterThePasswordAgain">再次输入新密码</string>
    <string name="Return">返回</string>
    <string name="OldPassWordErroy">旧密码输入错误</string>
    <string name="TheTwoPasswordsDoNotMatch">两次密码输入不一致</string>
    <string name="ChangePassWord_successful">修改密码成功</string>
    <string name="ChangePassWord_failed">修改密码失败</string>
    <string name="OldPasswordCanNotBeTheSame">新旧密码不能相同</string>
    <string name="PassWordLengthShouldBe6to20">密码长度应为6-20位</string>
    <string name="minbingtuan">民兵团\n欢迎您的加入！</string>

    <!-- 查询 -->
    <string name="RegisterInfoStatistics">签到信息统计</string>
    <string name="StartAndEndDates">起止日期:</string>
    <string name="DefailDates">2015-01-01</string>
    <string name="HengXian">———</string>
    <string name="Quiry">查询</string>
    <string name="SelectStartTime">选择起始时间</string>
    <string name="SelectEndTime">选择结束时间</string>
    <string name="Date">日期</string>
    <string name="WorkOnOrWorkOff">上、下班</string>
    <string name="RegisterTime">签到时间</string>
    <!-- Volley Error -->
    <string name="generic_server_down">网络超时</string>
    <string name="no_internet">没有网络</string>
    <string name="generic_error">未知错误</string>
    <string name="Setting_name">未设置姓名</string>
    <string name="Setting_birthday">未设置出生日期</string>
    
    <!-- 星期 -->
    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tues">二</string>
    <string name="wed">三</string>
    <string name="thus">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    

</resources>