<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    	android:background="@color/blue"
        android:gravity="center">
        <TextView 
	        android:id="@+id/sun"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/sun"
	        android:textColor="@color/white"/>
	    <TextView 
	        android:id="@+id/mon"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/mon"
	        android:textColor="@color/white"/>
	    <TextView 
	        android:id="@+id/tues"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/tues"
	        android:textColor="@color/white"/>
	    <TextView 
	        android:id="@+id/wed"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/wed"
	        android:textColor="@color/white"/>
	    <TextView 
	        android:id="@+id/thus"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/thus"
	        android:textColor="@color/white"/>
	    <TextView 
	        android:id="@+id/fri"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/fri"
	        android:textColor="@color/white"/>
	    <TextView 
	        android:id="@+id/sat"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/sat"
	        android:textColor="@color/white"/>
    </LinearLayout>
    <GridView 
        android:id="@+id/gridview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numColumns="7"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:scrollbars="none"
        android:clickable="true"
        android:clipChildren="true"/>
    
</LinearLayout>
