<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginbackground"
    android:clickable="true" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">
        <EditText 
	        android:id="@+id/editTextusername"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_margin="15dp"
	        android:background="@color/white"
	        android:paddingLeft="10dp"
	        android:hint="@string/username"
	        android:singleLine="true"
	        android:textColor="@color/buttonTextDefault"
	        android:textColorHint="@color/buttonTextHint"
	        android:drawableLeft="@drawable/red_snowflake"/>
        <EditText 
	        android:id="@+id/editTextuserpassword"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_margin="15dp"
	        android:paddingLeft="10dp"
	        android:background="@color/white"
	        android:ems="16"
	        android:singleLine="true"
	        android:hint="@string/EnterPassWordLengthShouldBe6to20"
	        android:inputType="textPassword"
	        android:textColor="@color/buttonTextDefault"
	        android:textColorHint="@color/buttonTextHint"
	        android:drawableLeft="@drawable/red_snowflake"/>
        <EditText 
	        android:id="@+id/editTextConfirmPassWord"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_margin="15dp"
	        android:paddingLeft="10dp"
	        android:background="@color/white"
	        android:ems="16"
	        android:singleLine="true"
	        android:hint="@string/confirmpassword"
	        android:inputType="textPassword"
	        android:textColor="@color/buttonTextDefault"
	        android:textColorHint="@color/buttonTextHint"
	        android:drawableLeft="@drawable/red_snowflake"/>
        <TextView 
	        android:id="@+id/ButtonGroup"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_margin="15dp"
	        android:paddingLeft="10dp"
	        android:background="@color/white"
	        android:ems="16"
	        android:gravity="center_vertical"
	        android:singleLine="true"
	        android:textSize="18sp"
	        android:hint="@string/group"
	        android:textColor="@color/buttonTextDefault"
	        android:textColorHint="@color/buttonTextHint"
	        android:drawableLeft="@drawable/red_snowflake"/>
        <EditText 
	        android:id="@+id/editTextTel"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_margin="15dp"
	        android:paddingLeft="10dp"
	        android:background="@color/white"
	        android:ems="16"
	        android:singleLine="true"
	        android:hint="@string/phoneNumber"
	        android:inputType="phone"
	        android:textColor="@color/buttonTextDefault"
	        android:textColorHint="@color/buttonTextHint"
	        android:drawableLeft="@drawable/red_snowflake"/>
        <EditText 
	        android:id="@+id/editTextEmail"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_margin="15dp"
	        android:paddingLeft="10dp"
	        android:singleLine="true"
	        android:background="@color/white"
	        android:ems="16"
	        android:hint="@string/Email"
	        android:inputType="textEmailAddress"
	        android:textColor="@color/buttonTextDefault"
	        android:textColorHint="@color/buttonTextHint"/>
        <Button 
    	    android:id="@+id/buttonregister"
    	    android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_margin="15dp"
	        android:paddingLeft="10dp"
            android:background="@color/buttonTextBlue"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</ScrollView>
