<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/action_bar_titles"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/loginbackground1" >

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/ChangePassWord"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/Return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:contentDescription="@null"
            android:src="@drawable/jiantouzuoone"/>

        <Button
            android:id="@+id/ButtonDetermine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:text="@string/determine"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayoutOldPassWord"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/action_bar_titles"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/OldPassWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:text="@string/OldPassWord" />

        <EditText
            android:id="@+id/EditTextOldPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="12dp"
            android:layout_toRightOf="@+id/OldPassWord"
            android:background="@null"
            android:hint="@string/EnterOldPassWord" />

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#CACACA" >
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="#CACACA" >
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayoutNewPassWord"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/RelativeLayoutOldPassWord" >

        <TextView
            android:id="@+id/NewPassWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:text="@string/NewPassWord" />

        <EditText
            android:id="@+id/EditTextNewPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="12dp"
            android:layout_toRightOf="@+id/NewPassWord"
            android:background="@null"
            android:hint="@string/EnterNewPassWord" />

        <RelativeLayout
            android:id="@+id/RelativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="#CACACA" >
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/RelativeLayoutConfirmNewPassWord"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/RelativeLayoutNewPassWord" >

        <TextView
            android:id="@+id/ConfirmNewPassWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:text="@string/ConfirmNewPassWord" />

        <EditText
            android:id="@+id/EditTextConfirmNewPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="12dp"
            android:layout_toRightOf="@+id/ConfirmNewPassWord"
            android:background="@null"
            android:hint="@string/EnterThePasswordAgain" />

        <RelativeLayout
            android:id="@+id/RelativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="#CACACA" >
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>