<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:focusable="true"  
	android:focusableInTouchMode="true" 
    android:background="@color/loginbackground1" >
    <ScrollView 
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView 
		        android:id="@+id/img"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:src="@drawable/mbt"
		        android:contentDescription="@null"/>
	    	<LinearLayout 
		        android:paddingLeft="20dp"
		        android:paddingRight="20dp"
		        android:paddingTop="20dp"
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
		        android:orientation="vertical"
		        android:gravity="center">
		        <EditText 
		            android:id="@+id/EditTextUserName"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:hint="@string/username"
		            android:drawableLeft="@drawable/loginview"/>
		        <EditText 
		            android:id="@+id/EditTextUserPassWord"
		            android:paddingTop="5dp"
		            android:layout_height="wrap_content"
		            android:layout_width="match_parent"
		            android:hint="@string/password"
		            android:inputType="textPassword"
		            android:drawableLeft="@drawable/passwordview"/>
	        
	    	</LinearLayout>
	    	<LinearLayout 
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
		        android:paddingLeft="30dp"
		        android:paddingRight="30dp"
		        android:orientation="horizontal"
		        android:gravity="center"
		        android:background="@null">
		        <CheckBox 
		            android:id="@+id/check"
		            android:layout_height="wrap_content"
		            android:layout_width="wrap_content"
		            android:checked="true"/>
		        <TextView 
		            android:paddingLeft="5dp"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/SaveUserPassword"/>
	    	</LinearLayout>
	    	<LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingLeft="50dp"
		        android:paddingRight="50dp"
		        android:orientation="vertical"
		        android:gravity="center"
		        android:background="@null">
		        <Button 
		            android:id="@+id/buttonLogin"
		            android:layout_height="50dp"
		            android:layout_width="match_parent"
		            android:background="@color/green"
			        android:text="@string/login"
			        android:textColor="@color/white"
			        android:textSize="24sp"/>
		        <LinearLayout 
		            android:layout_height="wrap_content"
		            android:layout_width="match_parent"
		            android:paddingTop="15dp"
		            android:orientation="horizontal"
		            android:gravity="center"
		            android:background="@null"
		            >
	            	<Button
			            android:id="@+id/buttonRegister"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:paddingRight="10dp"
			            android:background="@null"
			            android:text="@string/registration_account"
			            android:textColor="@color/white"
			            android:textSize="16sp" />
		            <View
			            android:id="@+id/view1"
			            android:layout_width="1dp"
			            android:layout_height="15dp"
			            android:background="@color/white" />
		            <Button
			            android:id="@+id/buttonforget"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:paddingLeft="10dp"
			            android:background="@null"
			            android:text="@string/forgetPassword"
			            android:textColor="@color/white"
			            android:textSize="16sp" />
	        	</LinearLayout>
	    	</LinearLayout>
        </LinearLayout>
    </ScrollView>
    
    

</LinearLayout>
