<!-- 网络连接，提示框 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_index_bg"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".FlowActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="170" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_centerInParent="true"
            android:text="@string/net_discon"
            android:textColor="#000000"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd" />

    <LinearLayout
       
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
 		<Button
       		android:id="@+id/dialogSetBut"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_net_btn"
            android:text="@string/set"
            android:textColor="#2daad0"
            android:textSize="16sp" />
        <Button
             android:id="@+id/dialogCloseBut"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_net_btn"
            android:text="@string/cancel"
            android:textColor="#2daad0"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>